<resources>
  <string name="app_name">HBT</string>
  <!-- Strings related to login -->
  <string name="prompt_user_name">User name</string>
  <string name="prompt_pin_code">PIN code</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_register">Register</string>
  <string name="welcome">"Welcome!"</string>
  <string name="invalid_username">Username is too short</string>
  <string name="invalid_pin_code">PIN code must be between 4 and 9 digits</string>
  <string name="login_failed">"Login failed"</string>
  <!-- Strings related to register -->
  <string name="role_beneficiary">Beneficiary</string>
  <string name="role_merchant">Merchant</string>
  <string name="hint_passport_number">10AB12345</string>
  <string name="invalid_passport">Passport ID too short</string>
  <string name="walletUsername">username</string>
  <string name="defaultWalletBalance">0 HBT</string>
  <string name="wallet_button_receive_text"><![CDATA[> Receive]]></string>
  <string name="wallet_button_send_text"><![CDATA[Send >]]></string>
  <string name="wallet_button_ok_text">OK</string>
  <string name="qr_code_place_holder">QR code place holder</string>
  <string name="transfer_amount">Amount to transfer</string>
  <string name="hbt_currency">%.2f HBT</string>
  <string name="hbt_rx_transaction">{\"dst\"=\"%s\",\"amount\"=%.2f}</string>
  <string name="wallet_button_logout">Logout</string>
  <string name="request_permission">Allow Camera</string>
  <string name="action_scan_passport">Scan Passport</string>
  <string name="loading">Reading passport data</string>
  <string name="passport_number">Passport Number :</string>
  <string name="expiration_date">Expiration Date :</string>
  <string name="birth_date">Birth Date :</string>
  <string name="validate">Validate</string>
  <string name="skip_nfc">Skip Nfc</string>
  <string name="manual_input">Manual Input</string>
  <string name="automatic_input">Automatic Input</string>
  <string name="expiration_hint">Expiration</string>
  <string name="birth_date_hint">Birth Date</string>
  <string name="error_invalid_passport">The scanned passport does not have the proper data</string>
</resources>
