<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingHorizontal="@dimen/fragment_horizontal_margin"
  android:paddingVertical="@dimen/fragment_vertical_margin"
  tools:context=".ui.register.RegisterFragment">

  <EditText
    android:id="@+id/register_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="8dp"
    android:autofillHints="@string/prompt_user_name"
    android:hint="@string/prompt_user_name"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/register_pincode"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="8dp"
    android:autofillHints="@string/prompt_pin_code"
    android:hint="@string/prompt_pin_code"
    android:imeActionLabel="@string/action_sign_in"
    android:imeOptions="actionDone"
    android:inputType="number"
    android:minHeight="48dp"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_username" />

  <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_passport">

    <RadioButton
      android:id="@+id/radioButtonBeneficiary"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/role_beneficiary" />

    <RadioButton
      android:id="@+id/radioButtonMerchant"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/role_merchant" />
  </RadioGroup>

  <EditText
    android:id="@+id/register_passport"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:autofillHints="@string/hint_passport_number"
    android:hint="@string/hint_passport_number"
    android:importantForAutofill="auto"
    android:inputType="textCapWords"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_pincode" />

  <Button
    android:id="@+id/register_register"
    android:layout_width="204dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="48dp"
    android:enabled="false"
    android:text="@string/action_register"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
