<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingHorizontal="@dimen/fragment_horizontal_margin"
  android:paddingVertical="@dimen/fragment_vertical_margin"
  tools:context=".ui.wallet.WalletFragment">

  <TextView
    android:id="@+id/walletUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:fontFamily="serif"
    android:minHeight="24dp"
    android:selectAllOnFocus="true"
    android:text="@string/walletUsername"
    android:textAlignment="center"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/walletRole"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:minHeight="24dp"
    android:selectAllOnFocus="true"
    android:text="@string/role_beneficiary"
    android:textAlignment="center"
    android:textColor="#DD2C00"
    android:textStyle="italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletUsername" />

  <TextView
    android:id="@+id/walletBalance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:minHeight="24dp"
    android:selectAllOnFocus="true"
    android:text="@string/defaultWalletBalance"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletRole" />

  <Button
    android:id="@+id/walletButtonReceive"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:text="@string/wallet_button_receive_text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/walletButtonOk" />

  <Button
    android:id="@+id/walletButtonOk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/wallet_button_ok_text"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletBalance" />

  <Button
    android:id="@+id/walletButtonSend"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:text="@string/wallet_button_send_text"
    app:layout_constraintTop_toTopOf="@+id/walletButtonOk"
    app:layout_constraintEnd_toEndOf="parent" />

  <EditText
    android:id="@+id/walletAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:inputType="number"
    android:minHeight="24dp"
    android:selectAllOnFocus="true"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textStyle="bold"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletButtonOk"
    android:autofillHints="123.45"
    tools:ignore="LabelFor" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_marginTop="24dp"
    android:src="@android:drawable/progress_indeterminate_horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/walletAmount"
    android:contentDescription="@string/qr_code_place_holder" />

</androidx.constraintlayout.widget.ConstraintLayout>
